Revert "Added Isabella Kraus to developers.txt"
This commit contained unrelated (and apparently wrong) changes, which
were not indicated in the commit message. The author has not responded
to queries, so I am reverting their changes.

See
https://github.com/pencil-code/pencil-code/commit/3a060a3ebdc6d3b4f4e6ecf92be9bec8ddec6a3d

This reverts commit 3a060a3ebdc6d3b4f4e6ecf92be9bec8ddec6a3d.

Isabella, please reintroduce these changes if needed after addressing
the comments in the Github link.

--- a/config/compilers/extensions/GNU-GCC_optimal.conf
+++ b/config/compilers/extensions/GNU-GCC_optimal.conf
@@ -19,8 +19,8 @@
 	CFLAGS += -O3
 
 	# turn on hardware optimizations
-	FFLAGS += -march=skylake-avx512 -I/gpfs/opt/sw/skylake/spack-0.19.0/opt/spack/linux-almalinux8-skylake_avx512/gcc-12.2.0/hdf5-1.12.2-lnvdddvukmbxhi5kf7tqp7ubmafb7j34/include
-	CFLAGS += -march=skylake-avx512 -I/gpfs/opt/sw/skylake/spack-0.19.0/opt/spack/linux-almalinux8-skylake_avx512/gcc-12.2.0/hdf5-1.12.2-lnvdddvukmbxhi5kf7tqp7ubmafb7j34/include
+	FFLAGS += -march=native
+	CFLAGS += -march=native
 
 %endsection Makefile
 
