--- a/samples/supernova-driven-turbulence/1Dhd_init_equidistant/start.in
+++ b/samples/supernova-driven-turbulence/1Dhd_init_equidistant/start.in
@@ -9,7 +9,7 @@
   xyz0=-0.002,-0.002,-1.998
   xyz1=+0.002,+0.002,+1.998
   lperi=T,T,F
-  bcz = 's','s','s','ism','ism','s','s'
+  bcz = 's','s','s','ism','ism','s'
   lwrite_aux=T
   lfix_unit_std=T
 /
