MR: back to underscoring: doesn't matter for Linux, is needed for MacOS

--- a/config/compilers/separate/GNU-gfortran.conf
+++ b/config/compilers/separate/GNU-gfortran.conf
@@ -3,7 +3,7 @@
 %section Makefile
 	FC = gfortran
 	F77 = $(FC)
-	FFLAGS += -O -fno-underscoring
+	FFLAGS += -O   # -fno-underscoring
 	LDFLAGS_HELPER += -dynamic
 	FFLAGS_DOUBLE = -fdefault-real-8 -fdefault-double-8
 	OMPFFLAGS += -fopenmp
