--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,25 @@ src/astaroth/PC_*
 !src/astaroth/DSL/radiation/.pc_build_history
 !src/astaroth/DSL/radiation/.run_directories.log
 !src/astaroth/DSL/radiation/pc_build_tmp_*
+!samples/Schwinger/src/.DS_Store
+!samples/Schwinger/src/*.directory
+!samples/Schwinger/src/*.pyc
+!samples/Schwinger/src/*~
+!samples/Schwinger/src/.*.swp
+!samples/Schwinger/src/host-ID
+!samples/Schwinger/src/revision.txt
+!samples/Schwinger/src/*-eps-converted-to.pdf
+!samples/Schwinger/src/.run_directories.log
+!samples/Schwinger/src/pc_build_tmp_*
+!samples/Schwinger/src/.pc_build_history
+!samples/Schwinger/.DS_Store
+!samples/Schwinger/*.directory
+!samples/Schwinger/*.pyc
+!samples/Schwinger/*~
+!samples/Schwinger/.*.swp
+!samples/Schwinger/host-ID
+!samples/Schwinger/revision.txt
+!samples/Schwinger/*-eps-converted-to.pdf
+!samples/Schwinger/.run_directories.log
+!samples/Schwinger/pc_build_tmp_*
+!samples/Schwinger/.pc_build_history
