current version; message generated automatically on: Linux nl6 (brandenb)

--- a/samples/Schwinger/start.in
+++ b/samples/Schwinger/start.in
@@ -16,6 +16,7 @@
   initspecial='default', 'Bunch-Davies'
   amplphi=5.0210121e-05, amplee_BD_prefactor=8.3775398e-05, kpeak_phi=50e-6
   phi0=0.7, ascale_ini=1.
+  echarge_type='erun'
 /
 &disp_current_init_pars
   lsigE_as_aux=T, lsigB_as_aux=T
