--- a/samples/Schwinger/print.in
+++ b/samples/Schwinger/print.in
@@ -3,13 +3,12 @@ t(e12.5)
 dt(e9.2)
 erms(e10.3)
 emax(e10.3)
-phim(e21.13)
-phirms(e20.13)
-dphim(e21.13)
-dphirms(e20.13)
+phim(e11.3)
+phirms(e10.3)
+dphim(e11.3)
+dphirms(e10.3)
 Hscriptm(e11.3)
-lnam(e11.3)
-arms(e10.3)
+lnam(e11.3) arms(e10.3)
 brms(e10.3)
 bxm(e11.3)
 bym(e11.3)
