To match code changes of 13 July 2025, the following additions where made in samples/Schwinger:   &backreact_infl_init_pars     lcompute_dphi0=F   &disp_current_run_pars     lapply_Gamma_corr=T, lswitch_off_Gamma=T The is described in the README.md file of that sample. In bin/pc_auto-test, added backreact_infl, Schwinger

--- a/samples/Schwinger/run.in
+++ b/samples/Schwinger/run.in
@@ -20,6 +20,7 @@
   lbackreact_infl=T, ldt_backreact_infl=T
 /
 &disp_current_run_pars
+  lapply_Gamma_corr=T, lswitch_off_Gamma=T
   lmass_suppression=T, mass_chi=1e-2
   luse_scale_factor_in_sigma=T
   lnoncollinear_EB=T, sigB_prefactor=1., sigE_prefactor=1.
