Example to show the use of 10th-order derivatives.

--- a/samples/corona/src/Makefile.local
+++ b/samples/corona/src/Makefile.local
@@ -33,6 +33,8 @@ SHOCK	  =   shock
 
 SPECIAL   =   special/solar_corona
 
+!DERIV     = deriv_10th
+
 FOURIER   =   fourier_fftpack
 
 REAL_PRECISION = double
