remove dependency on BOUNDCOND_OBJ from GPU_OBJ; add diagnostic subroutines to backreact_infl and refactor computation of Hscript for preparation of acceleration

--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -338,7 +338,7 @@ noyinyang.o: yinyang.h noyinyang.f90 $(CPARAM_OBJ) $(CDATA_OBJ) $(GENERAL_OBJ)
 #
 noyinyang_mpi.o: yinyang_mpi.h noyinyang_mpi.f90 $(CPARAM_OBJ) $(GENERAL_OBJ) $(MPICOMM_OBJ)
 #
-$(GPU_OBJ): $(GPU_INTERFACE) gpu.h $(GPU_SRC) $(CPARAM_OBJ) $(CDATA_OBJ) $(BOUNDCOND_OBJ) $(GENERAL_OBJ) $(MPICOMM_OBJ)
+$(GPU_OBJ): $(GPU_INTERFACE) gpu.h $(GPU_SRC) $(CPARAM_OBJ) $(CDATA_OBJ) $(GENERAL_OBJ) $(MPICOMM_OBJ) $(MESSAGES_OBJ) $(FILE_IO_OBJ)
 #
 nogpu.o: gpu.h nogpu.f90 $(GENERAL_OBJ)
 #
