--- a/samples/conv-slab-torch/run.in
+++ b/samples/conv-slab-torch/run.in
@@ -1,21 +1,33 @@
-!  -*-f90-*-  (for Emacs)    vim:set filetype=fortran:  (for vim)
+
 !
 ! Convection in vertically stratified atmosphere/solar convection zone
 ! Run parameters
 !
 &run_pars
   ip=7
+	!lnowrite=F
   cvsid='$Id$',
-  nt=131, it1=100, isave=200, itorder=3
-  dsnap=20., dvid=200.,dt=1e-12,dtmin=1e-16
+  ! use this to evolve the system a bit
+	!nt=1200, it1=10, isave=100, itorder=3, dt=1e-4
+
+  ! then switch to stationary case
+ 	nt=3000, it1=10, isave=4000, itorder=3, dt=1e-12
+
+  dsnap=20., dtmin=1e-16
 !! uncomment the following block to see the free evolution of the system:
 !  nt=4000, it1=50, isave=2000, itorder=3
 !  dsnap=0.2, dvid=0.2
   !bcx = 'p','p','p', 'p',    'p'
   !bcy = 'p','p','p', 'p',    'p'
   !bcz = 's','s','a','a2','c1:cT'
-  cdtv=0.30, cdt=0.4
+  cdtv=0.30 
+	!cdt=0.2
   lpencil_check=T
+/
+&gpu_run_pars
+  ltest_bcs=F
+  lcpu_timestep_on_gpu=T
+  lcuda_aware_mpi=F
 /
 &eos_run_pars
 /
@@ -52,9 +64,12 @@
 
 ! tinit    -- initial time for smoothly switching on heating, etc
 &training_run_pars
-  lroute_via_cpu=T
-  it_train=10, it_train_chkpt=100
+  lroute_via_cpu=F
+  it_train=1, it_train_chkpt=100000000
+	!it_train_start=12000
   luse_trained_tau=F
-  max_loss=1.e-5
+  max_loss=1.e-10
   model='stationary'
+  config_file='config_mlp_native.yaml'
+  it_train_end=3000
 /
