--- a/samples/conv-slab-torch/src/Makefile.local
+++ b/samples/conv-slab-torch/src/Makefile.local
@@ -33,4 +33,4 @@ TRAINING  = training_torchfort
 GPU       =   gpu_astaroth
 GPU_VENDOR=   nvidia
 MULTITHREADING= openmp
-
+RUNTIME_COMPILATION= off
