CUDA_Toolkit can be found but we can still want to use CPUs

--- a/src/astaroth/CMakeLists.txt
+++ b/src/astaroth/CMakeLists.txt
@@ -50,7 +50,8 @@ message(STATUS "Build type: " ${CMAKE_BUILD_TYPE})
 
 find_package(CUDAToolkit QUIET)
 find_package(HIP QUIET)
-if (NOT USE_HIP AND CUDAToolkit_FOUND)
+if(CPU_BUILD)
+elseif (NOT USE_HIP AND CUDAToolkit_FOUND)
     message(STATUS "CUDA found")
     enable_language(CUDA)
     add_compile_options(-DDEVICE_ENABLED)
