--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -574,7 +574,6 @@ ifneq ($(GPU),nogpu)
       LDFLAGS_LIB = -L astaroth -L astaroth/submodule/build/src/core -L astaroth/submodule/build/src/core/kernels -lastaroth_core -lkernels -l$(LIBGPU_NAME)
       ifneq ($(filter on yes,$(RUNTIME_COMPILATION)),)
         RUNTIME_COMPILATION = on
-        LDFLAGS_LIB += -L astaroth/submodule/build/runtime_compilation
       else
         RUNTIME_COMPILATION = off
       endif
@@ -586,6 +585,9 @@ ifneq ($(GPU),nogpu)
 #      override LDFLAGS_LIB += -L astaroth/scheduler-build/src
   #   the following needed?
       LDFLAGS_LIB += -Wl,-O2 -Wl,--sort-common -Wl,--as-needed -Wl,-z,relro -Wl,-z,now -Wl,--disable-new-dtags -Wl,--gc-sections -ldl
+      ifneq ($(filter ON on,$(CPU_BUILD)),)
+	LDFLAGS_LIB += -lmpi_cxx
+      endif
   #-fzero-link
 
     else
