--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -85,7 +85,7 @@ else
   $(INITIAL_CONDITION_OBJ): initial_condition.h $(INITIAL_CONDITION_SRC) initial_condition_dummies.inc $(COMMON_DEPS) $(FARRAY_OBJ) $(GENERAL_OBJ) $(POISSON_OBJ) $(GRAVITY_OBJ) $(EOS_OBJ) $(BOUNDCOND_OBJ) $(STREAMLINES_OBJ) $(FIXED_POINT_OBJ)
 endif
 #
-$(TIMESTEP_OBJ): $(TIMESTEP_SRC) $(BORDER_PROFILES_OBJ) $(BOUNDCOND_OBJ) $(CDATA_OBJ) $(EQU_OBJ) $(FORCING_OBJ) $(MESSAGES_OBJ) $(MPICOMM_OBJ) $(SUB_OBJ) $(SOLID_CELLS_OBJ) $(SPECIAL_OBJ)
+$(TIMESTEP_OBJ): $(TIMESTEP_SRC) $(BORDER_PROFILES_OBJ) $(BOUNDCOND_OBJ) $(CDATA_OBJ) $(EQU_OBJ) $(FORCING_OBJ) $(MESSAGES_OBJ) $(MPICOMM_OBJ) $(PARTICLES_MAIN_OBJ) $(SUB_OBJ) $(SOLID_CELLS_OBJ) $(SPECIAL_OBJ)
 #
 $(SNAPSHOT_OBJ): $(SNAPSHOT_SRC) $(BOUNDCOND_OBJ) $(CDATA_OBJ) $(EOS_OBJ) $(MESSAGES_OBJ) $(MPICOMM_OBJ) $(GPU_OBJ) $(IO_OBJ) $(PARTICLES_MAIN_OBJ) $(PERSIST_OBJ) $(POWER_OBJ) $(PSCALAR_OBJ) $(RADIATION_OBJ) $(SHOCK_OBJ) $(STRUCT_FUNC_OBJ) $(CHEMISTRY_OBJ)
 #
@@ -311,7 +311,7 @@ $(SGSHYDRO_OBJ): SGS_hydro.h $(SGSHYDRO_SRC) $(BOUNDCOND_OBJ) $(CDATA_OBJ) $(FAR
 $(SOLID_CELLS_MPICOMM_OBJ): solid_cells_mpi.h $(SOLID_CELLS_MPICOMM_SRC) $(GENERAL_OBJ) $(CDATA_OBJ) $(MPICOMM_OBJ)
 #
 ifeq ($(SOLID_CELLS), nosolid_cells)
-  $(SOLID_CELLS_OBJ): solid_cells.h $(SOLID_CELLS_SRC) $(CPARAM_OBJ) $(CDATA_OBJ) $(GENERAL_OBJ) $(MESSAGES_OBJ)
+  $(SOLID_CELLS_OBJ): solid_cells.h $(SOLID_CELLS_SRC) $(CPARAM_OBJ) $(CDATA_OBJ) $(GENERAL_OBJ)
 else ifeq ($(SOLID_CELLS), solid_cells_ogrid)
   $(SOLID_CELLS_OBJ): solid_cells.h $(SOLID_CELLS_SRC) $(COMMON_DEPS) $(INITCOND_OBJ) $(INITIAL_CONDITION_OBJ) $(VISCOSITY_OBJ) $(ENERGY_OBJ) $(CHEMISTRY_OBJ) $(EOS_OBJ) $(SOLID_CELLS_OGRID_SUB_OBJ) $(SOLID_CELLS_OGRID_CDATA_OBJ) $(SOLID_CELLS_OGRID_CHEMISTRY_OBJ) $(SOLID_CELLS_MPICOMM_OBJ)
 else
