added 1d-tests/sine-gordon in level 2 of autotest. Modified sample to use klein_gordon module, results recover reference data of the smaple

--- a/samples/1d-tests/sine-Gordon/run.in
+++ b/samples/1d-tests/sine-Gordon/run.in
@@ -13,6 +13,5 @@
   dt=.1
 /
 &special_run_pars
-  lbackreact_infl=T, Hscript_choice='set', Vprime_choice='cos-profile'
-  Hscript0=0., axionmass=2., lambda_axion=1.
+  Vprime_choice='cos-profile', phimass=2., lambda_phi=1.
 /
