--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -3068,7 +3068,7 @@ start.x: start.o | $(SPECIAL_DEPS)
 #
 run.o: $(run) $(OMP_HEADER) Makefile.local
 run.x: run.o | $(SPECIAL_DEPS) $(LIBGPU)
-	$(LD) $(run) run.o $(LDFLAGS) $(LDFLAGS_MAIN) $(LDFLAGS_LIB) $(LD_MPI) $(LD_FOURIER) $(LIBSIG) $(LD_GSL) -o run.x
+	$(LD) $(run) run.o $(LDFLAGS_LIB) $(LDFLAGS) $(LDFLAGS_MAIN) $(LD_MPI) $(LD_FOURIER) $(LIBSIG) $(LD_GSL) -o run.x
 	@rm -f exit_mn.h
 #
 #  Rules for linking start and run as shared libararies.
