have to also have GENERATE_DSL_CODE=on to transpile code. Otherwise code is taken as is. Useful if you already have the code and do not need to generate it

--- a/config/compilers/extensions/GNU-GCC_debug_GPU.conf
+++ b/config/compilers/extensions/GNU-GCC_debug_GPU.conf
@@ -4,6 +4,7 @@
 	MULTITHREADING=openmp
 	RUNTIME_COMPILATION=on
 	TRANSPILATION=on
+	GENERATE_DSL_CODE=on
 	MPICOMM=mpicomm
 	CUDACXX=/usr/local/cuda-12.9/bin/nvcc
 	LDFLAGS+=-lmpi_cxx
