--- a/src/astaroth/Makefile
+++ b/src/astaroth/Makefile
@@ -160,7 +160,9 @@ ifeq ($(TRANSPILATION),on)
         for file in $(MODULESOURCES); do echo processing $$file ...; if [[ $$file =~ eos[_.] ]]; \
 	then ../scripts/phys_modules2c_transpilation par $$file equationofstate; \
         else ../scripts/phys_modules2c_transpilation par $$file; fi; done
-	python3 transpile.py
+        ifeq ($(GENERATE_DSL_CODE),on)
+	  python3 transpile.py
+        endif
 	@touch .sentinel
 else
 	@export DSL_MODULE_DIR=$(DSL_MODULE_DIR); \
